--- a/src/pages/admin/products/add/index.astro
+++ b/src/pages/admin/products/add/index.astro
@@ -7,7 +7,7 @@ import { getActiveCategories } from "@/lib/filter-category-service";
 import { getAuthenticatedUser } from '@/lib/auth-utils';
 import { isUserAdmin } from '@/lib/database';
 import { generateUUID } from "@/lib/database";
-import { ProductImageUploader } from "@/components/ui/ProductImageUploader";
+import ProductImageManagerCreate from "@/components/admin/ProductImageManagerCreate.astro";
 import DynamicListInput from "@/components/admin/DynamicListInput.astro";
 import ProductSizesTable from "@/components/admin/ProductSizesTable.astro";
 import FormPersistence from "@/components/admin/FormPersistence.astro";
@@ -883,11 +883,7 @@ if (Astro.request.method === "POST") {
             </p>
           </div>
         </div>
-        <ProductImageUploader
-          productId="new"
-          initialImages={[]}
-          isCreateMode={true}
-        />
+        <ProductImageManagerCreate />
       </div>
 
 
